[package]
name = "spacegate"
version.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = "../../README.md"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = "fat"
opt-level = 3
panic = "abort"
rpath = false
strip = true


[features]
default = ["fs"]
full = ["k8s", "fs", "redis", "axum"]
k8s = ["spacegate-shell/k8s"]
fs = ["spacegate-shell/fs"]
redis = ["spacegate-shell/cache"]
axum = ["spacegate-shell/ext-axum"]
# Used to statically link openssl at compile time
static-openssl = ["openssl/vendored"]

[dependencies]
# envy = { }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { workspace = true, features = ["derive"] }
spacegate-shell = { workspace = true, features = ["ext-axum", "plugin-all"] }
openssl = { version = "0.10" }
# tardis = { workspace = true, features = ["console-subscriber"] }
# tardis = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
