[package]
name = "spacegate"
version.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = "../../README.md"


[features]
default = ["fs", "plugin-all"]
full = ["k8s", "fs", "redis", "axum", "plugin-all"]
build-k8s = ["k8s", "redis", "axum", "plugin-all"]
build-local = ["fs", "redis", "axum", "plugin-all"]
build-simple = ["fs", "plugin-all"]
build-minimal = []
k8s = ["spacegate-shell/k8s"]
fs = ["spacegate-shell/fs"]
redis = ["spacegate-shell/cache"]
axum = ["spacegate-shell/ext-axum"]
# Used to statically link openssl at compile time
static-openssl = ["openssl/vendored"]
dylib = ["spacegate-shell/plugin-dylib"]
plugin-all = ["spacegate-shell/plugin-all"]
[dependencies]
# envy = { }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { workspace = true, features = ["derive"] }
spacegate-shell = { workspace = true }
openssl = { version = "0.10" }
# tardis = { workspace = true, features = ["console-subscriber"] }
# tardis = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
