[package]
name = "spacegate-admin-server"
version.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = "../../README.md"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = "fat"
opt-level = 3
panic = "abort"
rpath = false
strip = true

[features]
default = []


[dependencies]
clap = { version = "4.5", features = ["derive"] }
spacegate-config = { path = "../config", features = ["fs"], no-default-features = true }
axum = "0.7.4"
tower = { version = "0.4" }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tower-http = { version = "*", features = ["trace"] }
serde_json = { workspace = true }
[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
