[package]
name = "mitm-proxy"
version.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true


[[bin]]
name = "mitm-proxy"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spacegate-kernel = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
hyper-util = { workspace = true }
hyper = { workspace = true, features = ["full"] }
rustls = { version = "0" }
openssl = { version = "0.10", features = ["vendored"] }
tokio-rustls = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
rustls-pemfile = { workspace = true }