[package]
name = "spacegate_wasm_hello"
version = "0.0.0"
edition = "2021"
publish = false
description = "Minimal Proxy-Wasm hello world plugin for Spacegate."

# Standalone workspace: this crate builds for wasm32-wasip1 and is not part of
# the host Spacegate workspace.
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "fat"
strip = true
panic = "abort"
