[workspace]
members = [
  "hello-world",
  "ai-gateway-queue",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
publish = false

[workspace.dependencies]
proxy-wasm = "0.2"
serde_json = "1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "fat"
strip = true
panic = "abort"
