[package]
name = "spacegate"
version.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = "../../README.md"

[dependencies]
spacegate-kernel = { version = "0.1.0-alpha.6", path = "../../kernel", features = [
    "ws",
    "cache",
    "k8s",
] }

tardis = { workspace = true }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
