[package]
name = "spacegate"
version.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = "../../README.md"

[features]
default = []
# Used to statically link openssl at compile time
static-openssl = ["openssl/vendored"]

[dependencies]
spacegate-shell = { version = "0.1.0-alpha.7", path = "../../shell", features = [
  "ws",
  "cache",
  "k8s",
] }
openssl = { version = "0.10" }
tardis = { workspace = true }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
