[package]
name = "spacegate-native"
version.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme = "../../README.md"

[dependencies]
spacegate-kernel = { version = "0.1.0-alpha.7", path = "../../kernel", features = [
    "ws",
    "cache",
] }

tardis = { workspace = true }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[target.'cfg(not(target_os = "x86_64-unknown-linux-musl"))'.dependencies]
openssl = {features = ["vendored"]}
